cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MultiProjectsErrorHighlightingTest/third/third.cpp

#include "lib_header.h"

using namespace ns210384;

void third210384 () {
    void foo210384();
}
